@@ -10,6 +10,22 @@ struct test {
 };
 
 static const struct test tests[] = {
+  { "1e1", 1e1 },
+  { "1e-1", 1e-1 },
+  { "1e10", 1e10 },
+  { "1e-10", 1e-10 },
+  { "-1e1", -1e1 },
+  { "-1e-1", -1e-1 },
+  { "-1e10", -1e10 },
+  { "-1e-10", -1e-10 },
+  { "1.0e1", 1.0e1 },
+  { "1.0e-1", 1.0e-1 },
+  { "1.0e10", 1.0e10 },
+  { "1.0e-10", 1.0e-10 },
+  { "-1.0e1", -1.0e1 },
+  { "-1.0e-1", -1.0e-1 },
+  { "-1.0e10", -1.0e10 },
+  { "-1.0e-10", -1.0e-10 },
   { "0", 0.0 },
   { "-0", -0.0 },
   { "0.0", 0.0 },
@@ -72,22 +88,6 @@ static const struct test tests[] = {
   { "-1234567.890", -1234567.890 },
   { "-12345678.90", -12345678.90 },
   { "-123456789.0", -123456789.0 },
-  { "1e1", 1e1 },
-  { "1e-1", 1e-1 },
-  { "1e10", 1e10 },
-  { "1e-10", 1e-10 },
-  { "-1e1", -1e1 },
-  { "-1e-1", -1e-1 },
-  { "-1e10", -1e10 },
-  { "-1e-10", -1e-10 },
-  { "1.0e1", 1.0e1 },
-  { "1.0e-1", 1.0e-1 },
-  { "1.0e10", 1.0e10 },
-  { "1.0e-10", 1.0e-10 },
-  { "-1.0e1", -1.0e1 },
-  { "-1.0e-1", -1.0e-1 },
-  { "-1.0e10", -1.0e10 },
-  { "-1.0e-10", -1.0e-10 },
 };
 
 #define MAX_ERROR 0.000001
