@@ -1,21 +1,25 @@
 #include <math.h> /* severe problems on PPC if this is not included */
 #include "scan.h"
 
-unsigned int scan_double(const char *str, double *d)
+unsigned int scan_double(const char *str, double *f)
 {
   const char *ptr;
-  double td;
-  double dd;
-  double xd; 
+  double tf;
+  double df;
+  double xf; 
+  double exp;
   unsigned int pos;
   unsigned int div;
+  unsigned int exp_sign;
   char ch;
 
   ptr = str;
-  td = 0;
-  dd = 0;
+  tf = 0;
+  df = 0;
   div = 1;
   pos = 0;
+  exp = 0;
+  exp_sign = 0;
 
   if (str[0] == '-') ++str;
 
@@ -38,8 +42,11 @@ unsigned int scan_double(const char *str, double *d)
       case '7':
       case '8':
       case '9':
-        ch -= '0'; td = (td * 10) + ch; ++pos;
+        ch -= '0'; tf = (tf * 10) + ch; ++pos;
         break;
+      case 'e':
+      case 'E':
+        goto SCI_NOTATION;
       default:
         goto END;
     }
@@ -61,9 +68,40 @@ unsigned int scan_double(const char *str, double *d)
       case '7':
       case '8':
       case '9':
-        ch -= '0'; xd = (double) ch / pow(10, div); dd += xd;
+        ch -= '0'; xf = (double) ch / pow(10, div); df += xf;
         ++pos;
         ++div;
+        break;
+      case 'e':
+      case 'E':
+        goto SCI_NOTATION;
+      default:
+        goto END;
+    }
+  }
+
+  SCI_NOTATION:
+
+  /* skip 'e' */
+  ++pos;
+
+  /* check sign */
+  if (str[pos] == '-') { exp_sign = 1; ++pos; }
+
+  for (;;) {
+    ch = str[pos];
+    switch (ch) {
+      case '0':
+      case '1':
+      case '2':
+      case '3':
+      case '4':
+      case '5':
+      case '6':
+      case '7':
+      case '8':
+      case '9':
+        ch -= '0'; exp = (exp * 10) + ch; ++pos;
         break;
       default:
         goto END;
@@ -71,9 +109,11 @@ unsigned int scan_double(const char *str, double *d)
   }
 
   END:
+  tf = df + tf;
+  if (exp_sign) exp = -exp;
+  tf *= pow(10, exp);
 
-  td = dd + td;
-  if (ptr[0] == '-') td = -td;
-  *d = td;
+  if (ptr[0] == '-') tf = -tf;
+  *f = tf;
   return pos;
 }
