@@ -7,8 +7,10 @@ unsigned int scan_float(const char *str, float *f)
   float tf;
   float df;
   float xf; 
+  float exp;
   unsigned int pos;
   unsigned int div;
+  unsigned int exp_sign;
   char ch;
 
   ptr = str;
@@ -16,6 +18,8 @@ unsigned int scan_float(const char *str, float *f)
   df = 0;
   div = 1;
   pos = 0;
+  exp = 0;
+  exp_sign = 0;
 
   if (str[0] == '-') ++str;
 
@@ -40,6 +44,9 @@ unsigned int scan_float(const char *str, float *f)
       case '9':
         ch -= '0'; tf = (tf * 10) + ch; ++pos;
         break;
+      case 'e':
+      case 'E':
+        goto SCI_NOTATION;
       default:
         goto END;
     }
@@ -61,9 +68,40 @@ unsigned int scan_float(const char *str, float *f)
       case '7':
       case '8':
       case '9':
-        ch -= '0'; xf = (float) ch / pow(10, div); df += xf;
+        ch -= '0'; xf = (float) ch / powf(10, div); df += xf;
         ++pos;
         ++div;
+        break;
+      case 'e':
+      case 'E':
+        goto SCI_NOTATION;
+      default:
+        goto END;
+    }
+  }
+
+  SCI_NOTATION:
+
+  /* skip 'e' */
+  ++pos;
+
+  /* check sign */
+  if (str[pos] == '-') { exp_sign = 1; ++pos; }
+
+  for (;;) {
+    ch = str[pos];
+    switch (ch) {
+      case '0':
+      case '1':
+      case '2':
+      case '3':
+      case '4':
+      case '5':
+      case '6':
+      case '7':
+      case '8':
+      case '9':
+        ch -= '0'; exp = (exp * 10) + ch; ++pos;
         break;
       default:
         goto END;
@@ -71,8 +109,10 @@ unsigned int scan_float(const char *str, float *f)
   }
 
   END:
-
   tf = df + tf;
+  if (exp_sign) exp = -exp;
+  tf *= powf(10, exp);
+
   if (ptr[0] == '-') tf = -tf;
   *f = tf;
   return pos;
